first pass MEM_ALLOC and MEM_DUMP

--- a/P3a/makefile
+++ b/P3a/makefile
@@ -1,7 +1,11 @@
 all: 
-	gcc -c -fpic mem.c -Wall -Werror
-	gcc -shared -o libmem.so mem.o
-	gcc -lmem -L. -o main main.c -Wall -Werror -g
+	# Shared library compilation
+	#gcc -c -fpic mem.c -g -Wall -Werror
+	#gcc -shared -o libmem.so mem.o -g
+	#gcc -lmem -L. -o main -g main.c -Wall -Werror
+	
+	# No share for debugging
+	gcc -g -o main main.c mem.c -Wall -Werror
 	
 clean:
 	rm -f libmem.so main mem.o *~
