--- a/P3a/makefile
+++ b/P3a/makefile
@@ -1,11 +1,13 @@
-all: 
 	# Shared library compilation
 	#gcc -c -fpic mem.c -g -Wall -Werror
 	#gcc -shared -o libmem.so mem.o -g
 	#gcc -lmem -L. -o main -g main.c -Wall -Werror
 	
-	# No share for debugging
-	gcc -g -o main main.c mem.c -Wall -Werror
+
+
+all: 
+
+	gcc -g -o main main.c mem.c -Wall -Werror # DEBUG ONLY
 	
 clean:
 	rm -f libmem.so main mem.o *~
