added Pthread wrapper, and first bit of nextFit logic

--- a/P3a/makefile
+++ b/P3a/makefile
@@ -1,13 +1,15 @@
+all:
 	# Shared library compilation
-	#gcc -c -fpic mem.c -g -Wall -Werror
-	#gcc -shared -o libmem.so mem.o -g
-	#gcc -lmem -L. -o main -g main.c -Wall -Werror
+	gcc -c -fpic mem.c -g -Wall -Werror
+	gcc -shared -o libmem.so mem.o -g
+	gcc -lmem -L. -o main -g main.c -Wall -Werror
 	
 
 
-all: 
+#all: 
 
-	gcc -g -o main main.c mem.c -Wall -Werror # DEBUG ONLY
+
+#	gcc -g -o main main.c mem.c -Wall -Werror # DEBUG ONLY
 	
 clean:
 	rm -f libmem.so main mem.o *~
