only a few bugs left, just fixed coalescing bug

--- a/P3a/makefile
+++ b/P3a/makefile
@@ -3,13 +3,9 @@ all:
 	gcc -c -fpic mem.c -g -Wall -Werror
 	gcc -shared -o libmem.so mem.o -g
 	gcc -lmem -L. -o main -g main.c -Wall -Werror
-	
-
 
 #all: 
-
-
-#	gcc -g -o main main.c mem.c -Wall -Werror # DEBUG ONLY
+#	gcc -g -o main *.c -Wall -Werror # DEBUG ONLY
 	
 clean:
 	rm -f libmem.so main mem.o *~
