--- a/P5/makefile
+++ b/P5/makefile
@@ -1,7 +1,7 @@
 all:
-	gcc xfsck.c -Wall -Werror -g -o sf
+	gcc xfsck.c -Wall -Werror -g -o myfsck
 	
 clean:
-	rm sf -f
+	rm myfsck -f
 	rm *~ -f # I hate these files
 	rm view.txt
