I just turned in P5a, and ran the sanity script

--- a/P5/makefile
+++ b/P5/makefile
@@ -1,7 +1,7 @@
 all:
-	gcc xfsck.c -Wall -Werror -g -o myfsck
+	#gcc xfsck.c -Wall -Werror -g -o myfsck
 	gcc lfscat.c -Wall -Werror -g -o lfsreader
 	
 clean:
-	rm myfsck -f
+	rm lfsreader -f
 	rm *~ -f # I hate these files
